syntax = "proto3";

package pb;

option go_package = "pb/";

message GetUserByIdReq {
  int32 id = 1;
}

message GetUsersByIdsReq {
  repeated int32 ids = 1;
}

message CreateUserReq {
  string first_name = 1;
  string last_name= 2;
  string email= 3;
}

message NewUserIdResp {
  int32 id = 1;
}

message UpdateUserStatusReq {
  int32 id = 1;
  string status = 2;
}

message UpdateUserStatusResp {
  bool success = 1;
}

message GetUserStatusReq {
  int32 id = 1;
}

message GetUserStatusResp {
  string status = 1;
}

message DeleteUserReq {
  int32 id = 1;
}

message DeleteUserResp {
  bool success = 1;
}

message PublicUserInfo {
  int32 id = 1;
  string first_name = 2;
  string last_name= 3;
  string email= 4;
}

message PublicUserInfoResp {
  PublicUserInfo user = 1;
}

message PublicUsersInfoResp {
  repeated PublicUserInfo users = 1;
}

message GetUserIdByEmailReq {
  string email = 1;
}

message GetUserIdByEmailResp {
  int32 id = 1;
}

service UserService {
  rpc GetUserById(GetUserByIdReq) returns (PublicUserInfoResp);
  rpc GetUsersByIds(GetUsersByIdsReq) returns (PublicUsersInfoResp);
  rpc CreateUser(CreateUserReq) returns (NewUserIdResp);
  rpc UpdateUserStatus(UpdateUserStatusReq) returns (UpdateUserStatusResp);
  rpc GetUserStatus(GetUserStatusReq) returns (GetUserStatusResp);
  rpc DeleteUser(DeleteUserReq) returns (DeleteUserResp);
  rpc GetUserIdByEmail(GetUserIdByEmailReq) returns (GetUserIdByEmailResp);
}